--- a/WPF/Android/Views/NotificationsPage.xaml
+++ b/WPF/Android/Views/NotificationsPage.xaml
@@ -10,6 +10,34 @@
       Title="NotificationsPage">
     <Page.Resources>
         <converters:DateTimeToStringConverter x:Key="DateTimeConverter"/>
+
+        <Style TargetType="Label" x:Key="Header">
+            <Style.Setters>
+                <Setter Property="FontSize" Value="22"/>
+                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Beige}"/>
+                <Setter Property="BorderThickness" Value="0,0,0,2"/>
+                <Setter Property="Background" Value="{StaticResource Green}"/>
+                <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+            </Style.Setters>
+        </Style>
+
+        <Style TargetType="Label" x:Key="ButtonLabel">
+            <Style.Setters>
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+            </Style.Setters>
+        </Style>
+
+        <Style TargetType="TextBlock" x:Key="ButtonLabelTextBlock">
+            <Style.Setters>
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+            </Style.Setters>
+        </Style>
+
     </Page.Resources>
         <Grid Background="{StaticResource Beige}">
         
@@ -20,12 +48,13 @@
                     <RowDefinition/>
                     <RowDefinition Height="60"/>
                 </Grid.RowDefinitions>
-                <StackPanel VerticalAlignment="Center" Orientation="Horizontal" Grid.Row="0"  Background="{StaticResource Green}" Width="240" HorizontalAlignment="Left">
-                    <Label Content="All messages" BorderBrush="Black" BorderThickness="0,0,0,1" Padding="0" Margin="10,0,0,5" FontSize="26" FontWeight="Bold" VerticalAlignment="Center"
-                           Background="{StaticResource Green}"/>
-                    <Label x:Name="NumOfMessagesLabel" Padding="0" Margin="5,0,0,5" FontSize="26" FontWeight="Bold" VerticalAlignment="Center"  Background="{StaticResource Green}"/>
+                <StackPanel VerticalAlignment="Center" Orientation="Horizontal" Grid.Row="0"  Background="{StaticResource Green}" Width="200" HorizontalAlignment="Center">
+                    <Label Content="All messages" Padding="0" Margin="10,0,0,5"  VerticalAlignment="Center"
+                           Background="{StaticResource Green}" Foreground="{StaticResource Beige}" Style="{StaticResource Header}"/>
+                    <Label x:Name="NumOfMessagesLabel" Padding="0" Margin="5,0,0,5" Style="{StaticResource Header}" VerticalAlignment="Center"  Background="{StaticResource Green}" Foreground="{StaticResource Beige}"/>
                 </StackPanel>
-                <Button Grid.Row="3" Width="160" Height="50" Content="Mark all as read" FontSize="20" Click="MarkReadButton_Click" Background="{StaticResource Green}"/>
+                <Button Grid.Row="3" Width="160" Height="50" Content="Mark all as read" FontSize="20" Click="MarkReadButton_Click" Background="{StaticResource Green}"
+                        Foreground="{StaticResource Beige}"/>
 
                 <Border Grid.Row="1" BorderBrush="Black" BorderThickness="1">
                     <ScrollViewer Width="390" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalScrollBarVisibility="Hidden">
