--- a/WPF/Android/Views/RenovationDescriptionWindow.xaml
+++ b/WPF/Android/Views/RenovationDescriptionWindow.xaml
@@ -8,10 +8,30 @@
         Title="RenovationDescriptionWindow" Height="300" Width="300"
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
-        <Style TargetType="Label" x:Key="Labels">
+        <Style TargetType="Label" x:Key="Header">
+            <Style.Setters>
+                <Setter Property="FontSize" Value="22"/>
+                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Beige}"/>
+                <Setter Property="BorderThickness" Value="0,0,0,2"/>
+                <Setter Property="Background" Value="{StaticResource Green}"/>
+                <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+            </Style.Setters>
+        </Style>
+
+        <Style TargetType="Label" x:Key="ButtonLabel">
             <Style.Setters>
                 <Setter Property="FontSize" Value="16"/>
                 <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+            </Style.Setters>
+        </Style>
+
+        <Style TargetType="TextBlock" x:Key="ButtonLabelTextBlock">
+            <Style.Setters>
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="Foreground" Value="{StaticResource Beige}"/>
             </Style.Setters>
         </Style>
 
@@ -39,14 +59,15 @@
     </Window.Resources>
         <Grid Background="{StaticResource Beige}">
         <Label Content="Renovation Description" FontFamily="Global Sans Serif" FontSize="22" 
-               VerticalAlignment="Top" HorizontalAlignment="Center" BorderBrush="Black" BorderThickness="0,0,0,2" Padding="5,5,5,0" Background="{StaticResource Green}"/>
+               VerticalAlignment="Top" HorizontalAlignment="Center" Padding="5,5,5,0" Background="{StaticResource Green}"
+               Style="{StaticResource Header}"/>
         <TextBox x:Name="textBox" Text="{Binding RenovationDTO.Description}" IsEnabled="{Binding Editable}"
                  Height="150" Width="250" VerticalAlignment="Center" Margin="0,-15,0,15"/>
         <Button Height="50" Width="120" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="15" Command="{Binding ConfirmCommand}"
                 Style="{StaticResource DisabledButtonStyle}">
             <StackPanel Orientation="Horizontal" Margin="5,0,0,0">
-                <Image Source="{StaticResource ConfirmIcon}" Height="30" Width="30"/>
-                <Label Content="Confirm" Style="{StaticResource Labels}" VerticalAlignment="Center" Margin="5,0,0,0"/>
+                <Image Source="{StaticResource ConfirmIconBeige}" Height="30" Width="30"/>
+                <Label Content="Confirm" Style="{StaticResource ButtonLabel}" VerticalAlignment="Center" Margin="5,0,0,0"/>
             </StackPanel>
         </Button>
     </Grid>
