--- a/WPF/Android/Views/SideMenuPage.xaml
+++ b/WPF/Android/Views/SideMenuPage.xaml
@@ -49,6 +49,7 @@
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                             <Image Source="{StaticResource InboxIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
                             <TextBlock Text="Inbox" FontSize="16" Margin="10,0,0,0" VerticalAlignment="Center" FontFamily="Global Sans Serif"/>
+                            <TextBlock Text="{Binding MessagesNumLabel}" FontSize="16" Margin="5,0,0,0" VerticalAlignment="Center" FontFamily="Global Sans Serif"/>
                         </StackPanel>
                     </Border>
                 </ControlTemplate>
