--- a/WPF/Android/Views/ViewSelectedImagesWindow.xaml
+++ b/WPF/Android/Views/ViewSelectedImagesWindow.xaml
@@ -31,6 +31,33 @@
             </Setter>
         </Style>
 
+        <Style TargetType="Label" x:Key="Header">
+            <Style.Setters>
+                <Setter Property="FontSize" Value="22"/>
+                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Beige}"/>
+                <Setter Property="BorderThickness" Value="0,0,0,2"/>
+                <Setter Property="Background" Value="{StaticResource Green}"/>
+                <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+            </Style.Setters>
+        </Style>
+
+        <Style TargetType="Label" x:Key="ButtonLabel">
+            <Style.Setters>
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+            </Style.Setters>
+        </Style>
+
+        <Style TargetType="TextBlock" x:Key="ButtonLabelTextBlock">
+            <Style.Setters>
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+            </Style.Setters>
+        </Style>
+
     </Window.Resources>
     <Grid Background="{StaticResource Beige}">
         <Grid.ColumnDefinitions>
@@ -45,7 +72,7 @@
         </Grid.RowDefinitions>
             
         <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="0,0,0,1">
-            <Label Content="Selected images: " FontFamily="Global Sans Serif" FontSize="20" FontWeight="Bold" VerticalAlignment="Center"/>
+            <Label Content="Selected images: " Style="{StaticResource Header}" Width="180" VerticalAlignment="Center"/>
         </Border>
 
         <Border Grid.Row="1" Grid.Column="1" BorderBrush="Gray" BorderThickness="1">
@@ -60,8 +87,10 @@
                     <DataTemplate>
                         <StackPanel>
                             <Image Source="{Binding Converter={StaticResource Converter}}" Height="120" Width="120" SnapsToDevicePixels="True"/>
-                            <Button Content="Delete" Click="DeleteSelectedImage_Click" Height="40" Width="70" Margin="0,-10,0,0" Background="{StaticResource Green}"/>
-                        </StackPanel>
+                            <Button  Click="DeleteSelectedImage_Click" Height="40" Width="70" Margin="0,-10,0,0" Background="{StaticResource Green}">
+                                    <Label Content="Delete" Style="{StaticResource ButtonLabel}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                </Button>
+                            </StackPanel>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
@@ -71,8 +100,8 @@
         <Button Height="50" Width="130" VerticalAlignment="Center" Grid.Row="2" HorizontalAlignment="Center" Grid.Column="1" Click="Button_Click"
                 Style="{StaticResource DisabledButtonStyle}">
             <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-                <Image Source="{StaticResource ConfirmIcon}" Height="30" Width="30"/>
-                <Label Content="Confirm" VerticalAlignment="Center"/>
+                <Image Source="{StaticResource ConfirmIconBeige}" Height="30" Width="30"/>
+                <Label Content="Confirm" VerticalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
             </StackPanel>
         </Button>
 
